.provarCaches/00D410000011HE0EAM/objects/rstk__fsopickh__c.object
<CustomObject>
    <description>fsopickh__c</description>
    <fields>
        <fullName>rstk__address1__c</fullName>
        <label>Address Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address2__c</fullName>
        <label>Address Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address3__c</fullName>
        <label>Address Line 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__barcodeNText__c</fullName>
        <label>Bar Code Under Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__barcodeTextSize__c</fullName>
        <label>Bar Code Text Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__barcodedisp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bar Code Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__barcodeheight__c</fullName>
        <label>Bar Code Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__barcodetype__c</fullName>
        <label>Bar Code type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__barcodewidth__c</fullName>
        <label>Bar Code Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__carrier__c</fullName>
        <label>Carrier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__city__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__companylogo__c</fullName>
        <label>Company Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rstk__customername__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custpo__c</fullName>
        <label>Customer PO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custref__c</fullName>
        <label>Customer Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__duedate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__extcomment__c</fullName>
        <label>External Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__fob__c</fullName>
        <label>FOB</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__freightterms__c</fullName>
        <label>Freight Terms</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fsopickh_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Header</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>SO Pick List Headers</relationshipLabel>
        <relationshipName>sohdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fsopickh_sopickh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pick List Header</label>
        <referenceTo>rstk__sopickh__c</referenceTo>
        <relationshipLabel>SO Pick List Headers</relationshipLabel>
        <relationshipName>fsopickhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pages__c</fullName>
        <label>pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__paymentterms__c</fullName>
        <label>Payment Terms</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__printEnhancedCustInfoInHdr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Enhanced Customer Info Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoaddress1__c</fullName>
        <label>Ship To Address Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoaddress2__c</fullName>
        <label>Ship To Address Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoaddress3__c</fullName>
        <label>Ship To Address Line 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptocity__c</fullName>
        <label>Ship To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptostate__c</fullName>
        <label>Ship To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptozip__c</fullName>
        <label>Ship To Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__state__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__zip__c</fullName>
        <label>Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SO Pick List Header</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__customername__c</columns>
        <columns>rstk__fsopickh_sohdr__c</columns>
        <columns>rstk__fsopickh_sopickh__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>SO Pick List Headers</label>
    </listViews>
    <nameField>
        <label>SO Picklist Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Pick List Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>